webapp_server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cosmotech-webserver-experimental
spec:
  selector:
    cosmotech.com/service: cosmotech-webserver-experimental
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
