webapp_server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    email: platform@cosmotech.com
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
    nginx.org/client-max-body-size: "0"
  labels:
    owner: csm-platform
  name: cosmotech-webserver-experimental
  namespace: phoenix
spec:
  ingressClassName: nginx
  rules:
  - host: dev.api.cosmotech.com
    http:
      paths:
      - backend:
          service:
            name: cosmotech-webserver-experimental
            port:
              number: 80
        path: /phoenix/v3-1/brewery(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - dev.api.cosmotech.com
    secretName: letsencrypt-prod
